# monrun

./: .gitignore  Cargo.toml  README.md  example.creds.toml  example.monfile.toml
src/: helpers.rs  main.rs
