[package]
name = "monrun"
description = "cli to run monitor files"
author = ["mbecker20 <becker.maxh@gmail.com>"]
license = "GPL-3.0-or-later"
version = "0.5.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
monitor_client = "0.3.4"
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
toml = "0.8.8"